--- a/setup.cfg
+++ b/setup.cfg
@@ -8,9 +8,8 @@ description = A simple package for Raspberry Pi to play music and trigger music 
 long_description = file: README.md
 long_description_content_type = text/markdown
 classifiers =
-    Operating System :: Linux
+    Operating System :: POSIX :: Linux
     Programming Language :: Python
-    Topic :: Raspberry Pi :: GPIO
 
 [options]
 packages = find:
