--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,8 @@
 name: Upload Python Package
 
 on:
-  push:
-    branches: [ main ]
+  release:
+    types: [published]
 
 permissions:
   contents: read
@@ -25,12 +25,12 @@ jobs:
     - name: Publish package to Test PyPI
       uses: pypa/gh-action-pypi-publish@v1.5.0
       with:
+        skip_existing: true
         user: __token__
         password: ${{ secrets.TEST_PYPI_API_TOKEN }}
         repository_url: https://test.pypi.org/legacy/    
-    - name: Publish package to Test PyPI
-      if: startsWith(github.ref, 'ref/tags')
+    - name: Publish package to PyPI
       uses: pypa/gh-action-pypi-publish@v1.5.0
       with:
         user: __token__
-        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+        password: ${{ secrets.PYPI_API_TOKEN }}
